--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,22 @@
 body {
     font-family: 'Inter',serif;
     font-size: 22px;
-    background-image: url(sdss-website-images/background.png);
+    background-image: url(/sdss-website-images/background.png);
 }
 
 .content{
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 20%;
+    margin-right: 20%;
 }
+
+@media screen and (max-width: 640px) {
+    .content{
+        margin-left: 9vmin;
+        margin-right: 9vmin;
+    }
+
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -37,7 +46,7 @@ li {
     width: 100%;
     z-index: 100;
     opacity: .8;
-    height: 80px;
+    height: 12vmin;
 
 }
 
@@ -47,9 +56,6 @@ li {
 
 .nav-links a {
     color: #8FA2C4;
-    padding-right: 10px;
-    /*margin-left: 150px;*/
-    /*margin-right: 150px;*/
     text-decoration: none;
 }
 
@@ -60,36 +66,19 @@ li {
 /*logo*/
 .navbar img {
     float: left;
-    padding-left: 20px;
-    padding-top: 10px;
+    padding-left: 2vmin;
     width: 10%;
 }
-
-
 
 .menu {
     display: flex;
     font-family: 'Inter',serif;
-    font-size: 18px;
+    font-size: 3vmin;
     text-align: right;
     align-items: center;
     white-space: nowrap;
     color: #E6E9F8;
 }
-
-/*#overlay {*/
-/*    position: fixed; !* Sit on top of the page content *!*/
-/*    display: none; !* Hidden by default *!*/
-/*    width: 100%; !* Full width (cover the whole page) *!*/
-/*    height: 100%; !* Full height (cover the whole page) *!*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    right: 0;*/
-/*    bottom: 0;*/
-/*    background-color: rgba(0,0,0,0.5); !* Black background with opacity *!*/
-/*    z-index: 2; !* Specify a stack order in case you're using a different order for other elements *!*/
-/*    cursor: pointer; !* Add a pointer on hover *!*/
-/*}*/
 
 
 .menu li:hover {
@@ -98,7 +87,7 @@ li {
 }
 
 .menu li {
-    padding: 1px 40px;
+    padding: 4vmin;
 }
 
 /*intro*/
@@ -106,7 +95,7 @@ li {
 .intro{
     /*padding-top: 50px;*/
     justify-content: center;
-    padding-top: 100px;
+    padding-top: 10%;
     align-items: center;
 
 }
@@ -123,13 +112,15 @@ li {
 
 .intro2{
     font-family: 'Inter',serif;
-    font-size: 80px;
+    font-size: 4vmax;
     font-weight:700;
 
 }
 
 .button-container{
-    padding-top: 30px;
+    float: left;
+    width: 50%;
+    padding-top: 5%;
 }
 
 .get-in-touch{
@@ -137,7 +128,7 @@ li {
     border: none;
     color: white;
     width: 100%;
-    padding: 15px 32px;
+    padding: 8px 32px;
     text-align: center;
     /*text-decoration: none;*/
     display: inline-block;
@@ -147,11 +138,11 @@ li {
 }
 
 .intro-body-container{
-    font-size: 28px;
+    font-size: 1.4vmax;
 }
 
 .intro-body1{
-    padding-bottom: 50px;
+    padding-bottom: 2.5vmax;
 }
 
 .intro-body2{
@@ -164,12 +155,41 @@ li {
     z-index:0;
 }
 
+
+/* If the screen size is 640px wide or less */
+@media screen and (max-width: 640px) {
+    .intro2{
+        font-size: 10vmin;
+    }
+
+    .intro-container {
+        float: none;
+        padding-bottom: 10%;
+    }
+
+    .intro-body-container img{
+        position: absolute;
+        top: 10%;
+        width: 100%;
+        left: 30%;
+    }
+
+    .intro-body-container{
+        font-size: 2.5vmax;
+    }
+
+    .button-container{
+        width: 100%;
+        padding-top: 10%;
+    }
+}
+
 /*intro end*/
 
 /* subtitle styling */
 .subtitle{
     font-weight: 700;
-    font-size: 72px;
+    font-size: 7vmin;
     text-align: center;
     /*justify-content: center;*/
     /*align-items: center;*/
@@ -178,29 +198,150 @@ li {
 
 /* ABOUT US */
 .about-us{
-    margin-top: 300px;
-    margin-bottom: 30px;
+    margin-top: 50%;
+    margin-bottom: 10%;
  }
 
 .about-us-container{
     /*display: flex;*/
     display: block;
-    margin-top: 40px;
+    margin-top: 10%;
 }
 
 .about-us-text{
-    margin-bottom: 30px;
+    margin-bottom: 5%;
 }
 
 .about-us-left{
     float: left;
     color: #856E9F;
     font-weight: 700;
-    font-size: 55px;
-    margin-right: 20px;
+    font-size: 5vmin;
+    margin-right: 10%;
+    padding-top: 5%;
 }
 
 .about-us-right{
     display: flex;
-    margin-left: 50%;
+    margin-left: 40%;
 }
+
+@media screen and (max-width: 640px) {
+    .about-us{
+        margin-top: 100%;
+        margin-bottom: 10%;
+    }
+
+    .about-us-container{
+        position: center;
+    }
+
+    .subtitle{
+        font-weight: 700;
+        font-size: 8vmin;
+        text-align: center;
+    }
+
+    .about-us-left{
+        float: none;
+        text-align: center;
+        display: block;
+        padding-top: 1%;
+    }
+
+    .about-us-right{
+        margin-left: 0;
+        padding-top: 5%;
+    }
+}
+
+/*OUR TEAMS STYLING*/
+.our-teams{
+    margin-top: 20%;
+}
+
+.our-teams-container{
+    padding-top: 3%;
+}
+
+.row-1{
+    display: flex;
+    flex-direction: row;
+}
+
+.row-2{
+    display: flex;
+    flex-direction: row;
+    padding-top: 1%;
+}
+
+.our-teams-button{
+    width: 100%;
+    position: relative;
+    display: flex;
+    padding: 2%;
+}
+
+.our-teams-buttons{
+    background-color: #FFFFFF;
+    border: none;
+    color: black;
+    width: 100%;
+    /*padding: 8px 32px;*/
+    text-align: center;
+    /*text-decoration: none;*/
+    display: inline-block;
+    font-size: 1.5vmax;
+    border-radius: 15px;
+    font-weight: 300;
+    padding-top: 20px;
+    padding-bottom: 10vmax;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, .25);
+}
+
+/* FOOTER */
+
+.footer{
+    background-color: #856E9F;
+    width: 100%;
+    display: flex;
+    height: 5vmax;
+
+}
+
+.footer-images img{
+    height: 100%;
+}
+
+.footer-links{
+    /*text-align: center;*/
+    /*font-size: 2vmax;*/
+    /*padding-top: 20px;*/
+}
+
+.footer-links a{
+    /*color: #EBF1FF;*/
+}
+
+.footer-socials img{
+    height: 100%;
+    padding: 10%;
+}
+.footer-socials{
+    float: right;
+    display: flex;
+}
+
+.footer-links a:hover{
+    /*color: #8FA2C4;*/
+}
+
+.copyright{
+    text-align: center;
+    color: white;
+    font-family: 'Inter',serif;
+    font-size: 1vmax;
+    padding-right: 20px;
+    padding-bottom: 10px;
+}
+
