--- a/css/style.css
+++ b/css/style.css
@@ -14,31 +14,6 @@ body {
         margin-left: 9vmin;
         margin-right: 9vmin;
     }
-    .intro2{
-        font-size: 10vmin;
-    }
-
-    .intro-container {
-        float: none;
-        padding-bottom: 10%;
-    }
-
-    .intro-body-container img{
-        position: absolute;
-        top: 10%;
-        width: 100%;
-        left: 30%;
-    }
-
-    .intro-body-container{
-        font-size: 2.5vmax;
-    }
-
-    .button-container {
-        width: 100%;
-        padding-top: 10%;
-    }
-
 }
 
 * {
@@ -69,7 +44,6 @@ li {
     background-color: #EBF1FF;
     width: 100%;
     z-index: 100;
-    opacity: .8;
     height: 12vmin;
 
 }
@@ -112,6 +86,109 @@ li {
 
 .menu li {
     padding: 4vmin;
+}
+
+.hamburger{
+    display: none;
+    font-size: 5vmax;
+    user-select: none;
+    padding: 3vmax;
+}
+
+input[type=checkbox] {
+    display: none;
+}
+
+/* DROPDOWN MENU */
+.our-team-navbar {
+    position: relative;
+}
+
+.dropdown {
+    background-color: #EBF1FF;
+    padding: 1em 0;
+    position: absolute; /*WITH RESPECT TO PARENT*/
+    display: none;
+    /*border-radius: 8px;*/
+    top: 12vmin;
+}
+
+.dropdown li + li {
+    margin-top: 10px;
+}
+
+.dropdown li {
+    padding: 0.5em 1em;
+    width: 15em;
+    text-align: center;
+}
+
+.dropdown li:hover {
+    background-color: #856E9F;
+}
+
+.dropdown a:hover {
+    color: white;
+}
+
+.our-team-navbar:hover .dropdown {
+    display: block;
+}
+
+@media screen and (max-width: 1024px){
+    .menu {
+        display:none;
+        position: absolute;
+        background-color: #EBF1FF;
+        right: 0;
+        left: 0;
+        text-align: center;
+        padding: 16px 0;
+    }
+
+    .menu li:hover {
+        display: inline-block;
+        background-color: #856E9F;
+        width: 100%;
+        transition: 0.3s ease;
+    }
+
+    .menu li + li {
+        margin-top: 12vmin;
+    }
+
+    .nav-links a {
+        color: #8FA2C4;
+        text-decoration: none;
+    }
+
+    .menu a:hover{
+        color: white;
+        text-decoration: none;
+        display: inline-block;
+    }
+
+    input[type=checkbox]:checked ~ .menu {
+        display: block;
+    }
+
+    .hamburger {
+        display: block;
+    }
+
+    .dropdown {
+        left: 20%;
+        transform: translateX(35%);
+        border-radius: 8px;
+        top: 12vmin;
+    }
+
+    .dropdown li:hover {
+        background-color: #856E9F;
+        color: white;
+    }
+
+
 }
 
 /*intro*/
@@ -182,6 +259,34 @@ li {
 
 /*intro end*/
 
+@media screen and (max-width: 1024px) {
+    .intro2{
+        font-size: 10vmin;
+    }
+
+    .intro-container {
+        float: none;
+        padding-bottom: 10%;
+    }
+
+    .intro-body-container img{
+        position: absolute;
+        top: 10%;
+        width: 100%;
+        left: 30%;
+    }
+
+    .intro-body-container{
+        font-size: 2.5vmax;
+    }
+
+    .button-container {
+        width: 100%;
+        padding-top: 10%;
+    }
+
+}
+
 /* subtitle styling */
 .subtitle{
     font-weight: 700;
@@ -243,6 +348,7 @@ li {
         text-align: center;
         display: block;
         padding-top: 1%;
+        font-size: 5vmin;
     }
 
     .about-us-right{
