--- a/css/style.css
+++ b/css/style.css
@@ -407,43 +407,28 @@ input[type=checkbox] {
     background-color: #856E9F;
     width: 100%;
     display: flex;
-    height: 5vmax;
-
+    min-height: 5vmax;
+    padding: 2% 3%;
 }
 
 .footer-images img{
-    height: 100%;
-}
-
-.footer-links{
-    /*text-align: center;*/
-    /*font-size: 2vmax;*/
-    /*padding-top: 20px;*/
-}
-
-.footer-links a{
-    /*color: #EBF1FF;*/
+    height: 5vw;
 }
 
 .footer-socials img{
-    height: 100%;
-    padding: 10%;
+    height: 4vw;
 }
 .footer-socials{
-    float: right;
     display: flex;
-}
-
-.footer-links a:hover{
-    /*color: #8FA2C4;*/
+    gap: 2rem;
 }
 
 .copyright{
-    text-align: center;
+    text-align: center bottom;
     color: white;
     font-family: 'Inter',serif;
     font-size: 1vmax;
-    padding-right: 20px;
-    padding-bottom: 10px;
+    margin: 0 auto;
+    align-self: flex-end;
 }
 
