--- a/css/style.css
+++ b/css/style.css
@@ -401,6 +401,128 @@ input[type=checkbox] {
     box-shadow: 0 10px 10px rgba(0, 0, 0, .25);
 }
 
+/*JOIN US PAGE*/
+.join-us-description{
+    padding-top: 3vmax;
+}
+.join-us-buttons{
+    text-align: center;
+    display: block;
+    padding-top: 3vmax;
+    padding-bottom: 3vmax;
+}
+
+.join-us-button{
+    padding: 1%;
+}
+
+.join-us-executive{
+    width: 50%;
+    padding: 1%;
+    background-color: #B0579C;
+    border: none;
+    color: white;
+    text-align: center;
+    /*text-decoration: none;*/
+    font-size: 23px;
+    border-radius: 15px;
+    font-weight: 300;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, .25);
+}
+
+.join-us-consulting{
+    width: 50%;
+    padding: 1%;
+    background-color: #57A0B0;
+    border: none;
+    color: white;
+    text-align: center;
+    /*text-decoration: none;*/
+    font-size: 23px;
+    border-radius: 15px;
+    font-weight: 300;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, .25);
+}
+
+.join-us-gen-mem{
+    width: 50%;
+    padding: 1%;
+    background-color: #856E9F;
+    border: none;
+    color: white;
+    text-align: center;
+    /*text-decoration: none;*/
+    font-size: 23px;
+    border-radius: 15px;
+    font-weight: 300;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, .25);
+}
+
+/*contact us page*/
+/* Style inputs, select elements and textareas */
+input[type=text], select, textarea{
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    resize: vertical;
+}
+
+/* Style the label to display next to the inputs */
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+
+/* Style the submit button */
+input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+}
+
+/* Style the container */
+.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+
+/* Floating column for labels: 25% width */
+.col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+}
+
+/* Floating column for inputs: 75% width */
+.col-75 {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .col-25, .col-75, input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+    }
+}
+
+
 /* FOOTER */
 
 .footer{
@@ -424,7 +546,7 @@ input[type=checkbox] {
 }
 
 .copyright{
-    text-align: center bottom;
+    text-align: center;
     color: white;
     font-family: 'Inter',serif;
     font-size: 1vmax;
