--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Inter',serif;
     font-size: 22px;
@@ -246,9 +250,6 @@ input[type=checkbox] {
     padding-bottom: 2.5vmax;
 }
 
-.intro-body2{
-
-}
 
 .intro-body-container img{
     position: absolute;
