--- a/css/teams.css
+++ b/css/teams.css
@@ -5,7 +5,7 @@ html {
 body {
     font-family: 'Inter',serif;
     font-size: 22px;
-    background: linear-gradient(-45deg, #FFFFFF, #fde9f9,#FFFFFF, #EBF1FF);
+    background: linear-gradient(-45deg, #FFFFFF, #fde9f9,#FFFFFF, #EBF1FF, #eedfff);
 	background-size: 400% 400%;
     background-attachment: fixed;
     background-position: center;
@@ -64,7 +64,6 @@ li {
 .navbar {
     display: flex;
     align-items: center;
-    background-color: #EBF1FF;
     width: 100%;
     z-index: 100;
     height: 12vmin;
