--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 html {
     overflow-x: hidden;
     scroll-behavior: smooth;
+    overflow-y: scroll;
     /* scroll-padding-top: 30vmax; */
+}
+
+li{
+    cursor: pointer;
 }
 
 body {
@@ -322,8 +327,8 @@ input[type=checkbox] {
 
 /* ABOUT US */
 .about-us{
-    margin-top: 30vmax;
-    margin-bottom: 10%;
+    margin-top: 20vmax;
+    padding-top: 7rem;
 }
 
 .about-us-container{
@@ -383,7 +388,8 @@ input[type=checkbox] {
 /*OUR TEAMS STYLING*/
 
 .our-teams{
-    margin-top: 20vmax;
+    margin-top: 10vmax;
+    padding-top: 7rem;
 }
 
 .our-teams-container{
@@ -456,7 +462,8 @@ input[type=checkbox] {
 
 /*EVENTS SECTION*/
 .events {
-    margin-top: 30vmax;
+    margin-top: 10vmax;
+    padding-top: 7rem;
 }
 
 .events-section-title{
@@ -513,10 +520,8 @@ input[type=checkbox] {
 
 /*JOIN US PAGE*/
 .join-us {
-    margin-top: 20rem;
-    /* display: grid;
-    grid-template-columns: 1fr 1fr; */
-    margin-bottom: 3rem;
+    margin-top: 5vmax;
+    padding-top: 7rem;
 }
 
 .join-us-container{
@@ -545,14 +550,12 @@ input[type=checkbox] {
 }
 
 .join-us img {
-    width: 100%;
-    height: 100%;
+    width: 70%;
 }
 
 .join-us .join-us-img {
     grid-row: 2 / 4;
     grid-column: 2 / 3;
-    
 }
 
 .join-us-buttons button{
