--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ body {
 }
 
 .content{
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 18%;
+    margin-right: 18%;
 }
 
 @media screen and (max-width: 1024px) {
@@ -53,6 +53,8 @@ body {
 .navbar li {
     list-style: none;
 }
+
+
 
 /* NAVBAR MENU */
 
@@ -346,8 +348,19 @@ input[type=checkbox] {
 }
 
 .about-us-right{
-    display: flex;
+    /* display: flex; */
     margin-left: 40%;
+}
+
+.about-us-link{
+    display: inline-flex;
+    text-decoration: none;
+    font-weight: 600;
+    color: #856E9F;
+}
+
+.about-us-link:hover{
+    color: #B0579C;
 }
 
 @media screen and (max-width: 1024px) {
