--- a/css/style.css
+++ b/css/style.css
@@ -190,14 +190,6 @@ input[type=checkbox] {
     text-align: center;
 }
 
-.dropdown li:hover {
-    background-color: #c2b6cf;
-}
-
-.dropdown a:hover {
-    color: white;
-}
-
 .our-team-navbar:hover .dropdown {
     display: block;
 }
@@ -717,8 +709,9 @@ input[type=submit] {
     padding: 1.15% 2%;
 }
 
-.footer-images img{
+.footer-images{
     height: 5vw;
+    display: flex;
 }
 
 .footer-socials img{
@@ -730,13 +723,29 @@ input[type=submit] {
     align-items: flex-end;
 }
 
+.footer-container{
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+    align-self: flex-end;
+}
+
 .copyright{
     text-align: center;
     color: white;
     font-family: 'Inter',serif;
     font-size: 1vmax;
     margin: 0 auto;
-    align-self: flex-end;
+    /* align-self: flex-end; */
+}
+
+.email{
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    font-size: 1vmax;
+    padding-bottom: 1vmin;
 }
 
 .reveal{
