--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@ li{
     cursor: pointer;
 }
 
+a{
+    cursor: pointer;
+}
+
 body {
     font-family: 'Inter',serif;
     font-size: 22px;
@@ -75,6 +79,7 @@ body {
 .content{
     margin-left: 18%;
     margin-right: 18%;
+    z-index: 1;
 }
 
 @media screen and (max-width: 1024px) {
@@ -280,7 +285,7 @@ input[type=checkbox] {
     padding-top: 5%;
 }
 
-.get-in-touch{
+.get-involved{
     background-color: #856E9F;
     border: none;
     color: white;
@@ -562,53 +567,73 @@ input[type=checkbox] {
     padding-top: 7rem;
 }
 
-.join-us-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
-.join-us p {
-    margin: 1rem;
-    font-size: 1.15rem;
-}
-
-.join-us .subtitle {
-    grid-column: 1 / 3;
-    margin-bottom: 2rem;
-}
-
-.join-us .join-us-description{
-    grid-column: 1 / 2;
-}
-.join-us-buttons{
-    text-align: center;
-    display: block;
-    padding-bottom: 3vmax;
-    grid-column: 1 / 2;
-}
-
-.join-us img {
-    width: 70%;
-}
-
-.join-us .join-us-img {
-    grid-row: 2 / 4;
-    grid-column: 2 / 3;
-}
-
-.join-us-buttons button{
-    min-width: 80%;
-    margin-bottom: 0.5rem;
-    padding: 1rem 2rem;
+.join-us-square{
+    background-color: #FFFFFF;
     border: none;
-    color: white;
+    width: 40vmax;
+    height: 25vmax;
     text-align: center;
-    /*text-decoration: none;*/ 
-    font-size: 1.115rem;
-    border-radius: 15px;
+    border-radius: 40px;
+    border-color: #856E9F;
+    border-style: solid;
     font-weight: 300;
+    padding-top: 20px;
+    padding-bottom: 10vmax;
+    color: black;
     box-shadow: 0 10px 10px rgba(0, 0, 0, .25);
-    cursor: pointer;
+    display: block;
+    margin: auto;
+    position: relative;
+    
+}
+
+.join-us-button-container{
+    padding: 2vmax;
+}
+
+.join-us-buttons-container{
+    padding-top: 2%;
+    margin-bottom: 3vmax;
+}
+
+.join-us-button-title{
+    font-weight: 600;
+    font-size: 1.5vmax;
+}
+
+.join-us-button-description{
+    text-align: left;
+    padding-left: 3vmax;
+    padding-top: 1vmax;
+    font-size: 1.2vmax;
+    padding-right: 3vmax;
+    font-size: .8em;
+}
+
+.join-us-button-description ul{
+    text-align: left;
+    padding-left: 4vmax;
+}
+
+.join-us-button-link{
+    padding-left: 3vmax;
+    padding-right: 3vmax; 
+    position: absolute;
+    bottom: 10%;
+    margin: auto;
+    width: 100%;
+}
+
+.join-us-button-link button{
+    display: inline-block;
+    font-size: 23px;
+    padding: 1vmax;
+    border-radius: 30px;
+    font-weight: 500;
+    width: 100%;
+    color: white;
+    border: none;
+
 }
 
 .join-us-executive{
@@ -621,6 +646,28 @@ input[type=checkbox] {
 
 .join-us-gen-mem{
     background-color: #856E9F;
+}
+
+.join-us p {
+    margin: 1rem;
+    font-size: 1.15rem;
+}
+
+.join-us .subtitle {
+    margin-bottom: 2rem;
+}
+
+.join-us .join-us-description{
+    grid-column: 1 / 2;
+}
+
+.join-us img {
+    width: 70%;
+}
+
+.join-us .join-us-img {
+    grid-row: 2 / 4;
+    grid-column: 2 / 3;
 }
 
 .gen-mem-benefits{
@@ -710,13 +757,11 @@ input[type=submit] {
 }
 
 .footer-images{
-    height: 5vw;
+    height: 5.5vw;
     display: flex;
 }
 
-.footer-socials img{
-    height: 3vw;
-}
+
 .footer-socials{
     display: flex;
     gap: 2vw;
@@ -754,8 +799,8 @@ input[type=submit] {
     opacity: 0;
     transition: 2s all ease;
   }
-  .reveal.active{
+  
+.reveal.active{
     transform: translateY(0);
     opacity: 1;
-  }
-  
+}
