--- a/css/style.css
+++ b/css/style.css
@@ -681,7 +681,7 @@ input[type=checkbox] {
     padding-bottom: .8rem;
 }
 
-/*contact us page*/
+/* /*contact us page*/
 /* Style inputs, select elements and textareas */
 input[type=text], select, textarea{
     width: 100%;
@@ -744,7 +744,7 @@ input[type=submit] {
         margin-top: 0;
     }
 }
-
+ */
 /* CONTACT US SECTION */
 
 .contact-us{
