--- a/css/style.css
+++ b/css/style.css
@@ -428,27 +428,20 @@ input[type=checkbox] {
     }
 }
 
-/*OUR TEAMS STYLING*/
+/*OUR PARTNERS STYLING*/
 
-.our-teams{
+.our-partners{
     margin-top: 10vmax;
     padding-top: 7rem;
 }
 
-.our-teams-container{
+.our-partners-container{
     padding-top: 3%;
 }
 
-.row-1{
+.partner-images-row{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-}
-
-.row-2{
-    display: flex;
-    flex-direction: row;
-    padding-top: 1%;
     justify-content: center;
 }
 
@@ -681,7 +674,7 @@ input[type=checkbox] {
     padding-bottom: .8rem;
 }
 
-/* /*contact us page*/
+/*contact us page*/
 /* Style inputs, select elements and textareas */
 input[type=text], select, textarea{
     width: 100%;
@@ -744,7 +737,7 @@ input[type=submit] {
         margin-top: 0;
     }
 }
- */
+*/
 /* CONTACT US SECTION */
 
 .contact-us{
@@ -865,4 +858,3 @@ input[type=submit] {
     transform: translateY(0);
     opacity: 1;
 }
-
