--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
 html {
-    /* overflow-x: hidden !important;
     scroll-behavior: smooth;
-    overflow-y: auto; */
-    /* scroll-padding-top: 30vmax; */
 }
 
 li{
@@ -97,6 +94,19 @@ body {
     }
 }
 
+#slide-down{
+    animation: slideDown 1s ease;
+}
+
+@keyframes slideDown {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(150px);
+    }
+}
+
 /* NAVBAR MENU */
 .navbar li {
     list-style: none;
@@ -151,6 +161,7 @@ body {
     align-items: center;
     white-space: nowrap;
     color: #E6E9F8;
+    z-index: 100 !important;
 }
 
 
@@ -207,6 +218,8 @@ input[type=checkbox] {
         left: 0;
         text-align: center;
         padding: 16px 0;
+        top: 12vmin;
+        font-size: 1rem;
     }
 
     .menu li:hover {
@@ -237,11 +250,13 @@ input[type=checkbox] {
 
     .hamburger {
         display: block;
+        z-index: 100;
     }
 
     .dropdown {
         left: 25%;
         top: 12vmin;
+        z-index: 100;
     }
 
     .dropdown li:hover {
@@ -550,7 +565,7 @@ input[type=checkbox] {
     font-family: 'Outfit', sans-serif;
 }
 
-.event-image{
+.event-image {
     padding-top: 2%;
     width: 30vmax;
     aspect-ratio: 1 / 1;
@@ -612,8 +627,8 @@ input[type=checkbox] {
 
 /*JOIN US PAGE*/
 .join-us {
-    margin-top: 10vmax;
-    padding-top: 30%;
+    margin-top: 5vmax;
+    padding-top: 10vmax;
 }
 
 .join-us-square{
@@ -850,6 +865,7 @@ input[type=submit] {
 
 .contact-us{
     margin-top: 5vmax;
+    padding-top: 10vmax;
 }
 
 
@@ -876,8 +892,9 @@ input[type=submit] {
 }
 
 .sender-message textarea{
-    height: 400px;
+    height: 430px;
 }
+
 
 .contact-button{
     text-align: center;
@@ -910,9 +927,29 @@ input[type=submit] {
     margin-bottom: 0;
 }
 
+.sender-label{
+    font-size: 1rem;
+    padding: 0.5rem 0;
+}
+
+.label-container{
+    display: inline-flex;
+    font-size: 1rem;
+    padding: 0.5rem 0;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.error-message{
+    font-size: .8rem;
+    padding: 0.5rem 0;
+    font-style: italic;
+}
+
 @media screen and (max-width: 600px) {
     .sender-form{
         display: block;
+        margin-top: 1rem;
     }
 
     .sender-info input, .sender-message textarea, .sender-info select {
@@ -931,6 +968,7 @@ input[type=submit] {
     .send-confirm {
         padding: 3rem 2rem;
     }
+
 }
 
 
@@ -979,5 +1017,52 @@ input[type=submit] {
     color: white;
     font-size: 1vmax;
     padding-bottom: 1vmin;
+}
+
+@media screen and (max-width: 600px) {
+    .footer{
+        background-color: #856E9F;
+        width: 100%;
+        display: flex;
+        min-height: 5vmax;
+        padding: 1.15% 2%;
+    }
+    
+    .footer-images img{
+        height: 100%;
+    }
+    
+    
+    .footer-socials img{
+        width: 90%;
+        height: 60%;
+        align-items: flex-end;
+    }
+    
+    .footer-container{
+        justify-content: space-between;
+        width: 100%;
+        align-items: center;
+        align-self: flex-end;
+    }
+    
+    .copyright{
+        text-align: center;
+        color: white;
+        font-family: 'Outfit',serif;
+        font-size: 1vmax;
+        margin: 0 auto;
+        /* align-self: flex-end; */
+    }
+    
+    .email{
+        display: block;
+        text-align: center;
+        text-decoration: none;
+        color: white;
+        font-size: 1vmax;
+        padding-bottom: 1vmin;
+    }
+
 }
 
