--- a/css/style.css
+++ b/css/style.css
@@ -255,9 +255,11 @@ input[type=checkbox] {
     }
 
     .dropdown {
-        left: 25%;
-        top: 12vmin;
+        left: 10%;
+        right: 10%;
+        top: 15vmin;
         z-index: 100;
+        text-align: center;
     }
 
     .dropdown li:hover {
