--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ input[type=checkbox] {
     background-color: #856E9F;
     display: inline-block;
     font-size: 2vmax;
-    padding: .5vmax;
+    padding: 1vmax;
     border-radius: 30px;
     font-weight: 500;
     width: 100%;
@@ -628,6 +628,15 @@ input[type=checkbox] {
 
     .event-link button{
         width: 100%;
+        display: inline-block;
+        font-size: 2vmax;
+        padding: 1vmax;
+        border-radius: 30px;
+        font-weight: 500;
+        width: 100%;
+        color: white;
+        border: none;
+        font-family: 'Outfit', sans-serif;
     }
 }
 
