--- a/css/style.css
+++ b/css/style.css
@@ -625,7 +625,7 @@ input[type=checkbox] {
     }
 
     .events-description{
-        font-size: 1rem;
+        font-size: .5rem;
         margin: auto;
         padding-top: 5%;
     }
@@ -780,7 +780,7 @@ input[type=checkbox] {
         width: 100%;
         height: 40vmax;
         text-align: center;
-        border-radius: 40px;
+        border-radius: 10px;
         border-color: #856E9F;
         border-style: solid;
         font-weight: 300;
@@ -792,6 +792,15 @@ input[type=checkbox] {
         margin: auto;
         position: relative;
         
+    }
+
+    .join-us-button-link{
+        padding-left: 3vmax;
+        padding-right: 3vmax; 
+        position: absolute;
+        bottom: 5%;
+        margin: auto;
+        width: 100%;
     }
 
     .join-us-button-description{
