--- a/css/style.css
+++ b/css/style.css
@@ -625,7 +625,7 @@ input[type=checkbox] {
     }
 
     .events-description{
-        font-size: .5rem;
+        font-size: 1rem;
         margin: auto;
         padding-top: 5%;
     }
@@ -691,7 +691,7 @@ input[type=checkbox] {
     text-align: left;
     padding-left: 3vmax;
     padding-top: .8vmax;
-    font-size: 1.2vmax;
+    font-size: 1.2vw;
     padding-right: 3vmax;
 }
 
@@ -704,7 +704,7 @@ input[type=checkbox] {
     padding-left: 3vmax;
     padding-right: 3vmax; 
     position: absolute;
-    bottom: 10%;
+    bottom: 5%;
     margin: auto;
     width: 100%;
 }
@@ -807,7 +807,7 @@ input[type=checkbox] {
         text-align: left;
         padding-left: 3vmax;
         padding-top: 1vmax;
-        font-size: 1.8vmax;
+        font-size: 3.2vw;
         line-height: 120%;
         padding-right: 3vmax;
     }
