--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,8 @@ body {
 
 @media screen and (max-width: 1024px) {
     .content{
-        margin-left: 5%;
-        margin-right: 5%;
+        margin-left: 4%;
+        margin-right: 4%;
         position: relative;
         /* overflow: hidden; */
     }
@@ -131,7 +131,7 @@ body {
     align-items: center;
     width: 100%;
     z-index: 100;
-    height: 12vmin;
+    height: 10vmin;
     padding: 1rem;
     list-style: none;
 }
@@ -153,7 +153,7 @@ body {
 .navbar img {
     float: left;
     padding-left: 2vmin;
-    width: 10%;
+    width: 7%;
 }
 
 .menu {
@@ -303,22 +303,30 @@ input[type=checkbox] {
 }
 
 .button-container{
-    float: left;
-    width: 50%;
+    width: 100%;
     padding-top: 5%;
 }
 
 .get-involved{
     background-color: #856E9F;
     display: inline-block;
-    font-size: 23px;
-    padding: .5vmax;
+    font-size: 1.2vmax;
+    padding: 1vmax;
     border-radius: 30px;
     font-weight: 500;
     width: 100%;
     color: white;
     border: none;
     font-family: 'Outfit', sans-serif;
+    /* display: inline-block;
+    font-size: 1.5rem;
+    padding: .5vmax;
+    border-radius: 30px;
+    font-weight: 500;
+    width: 100%;
+    color: white;
+    border: none;
+    font-family: 'Outfit', sans-serif; */
 }
 
 .intro-body-container{
@@ -425,6 +433,8 @@ input[type=checkbox] {
 
 .about-us-text{
     margin-bottom: 5%;
+    vertical-align: middle;
+    display: inline-block;
 }
 
 .about-us-left{
@@ -433,13 +443,16 @@ input[type=checkbox] {
     font-weight: 700;
     font-size: 5vmin;
     margin-right: 10%;
-    padding-top: 5%;
+    font-family: 'Outfit',serif;
 }
 
 .about-us-right{
     /* display: flex; */
     margin-left: 40%;
     font-size: 2.5vmin;
+    vertical-align: middle;
+    /* padding-top: auto;
+    padding-bottom: auto; */
 }
 
 .about-us-link{
@@ -594,6 +607,7 @@ input[type=checkbox] {
     margin-left: 5%;
     float: right;
     padding-top: 10%;
+    font-size: 1.4vmax;
 }
 
 .event-link{
@@ -602,8 +616,8 @@ input[type=checkbox] {
 
 .event-link button{
     display: inline-block;
-    font-size: 23px;
-    padding: .5vmax;
+    font-size: 1.2vmax;
+    padding: 1vmax;
     border-radius: 30px;
     font-weight: 500;
     width: 100%;
@@ -712,8 +726,8 @@ input[type=checkbox] {
 
 .join-us-button-link button{
     display: inline-block;
-    font-size: 23px;
-    padding: .5vmax;
+    font-size: 1.2vmax;
+    padding: 1vmax;
     border-radius: 30px;
     font-weight: 500;
     width: 100%;
