--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
     z-index: 1;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1000px) {
     .content{
         margin-left: 4%;
         margin-right: 4%;
@@ -134,6 +134,7 @@ body {
     height: 10vmin;
     padding: 1rem;
     list-style: none;
+    justify-content: space-between;
 }
 
 .navbar-right{
@@ -151,9 +152,10 @@ body {
 
 /*logo*/
 .navbar img {
-    float: left;
-    padding-left: 2vmin;
-    width: 7%;
+    /* float: left; */
+    padding: 2vmin;
+    width: 4rem;
+    padding-top: 20px;
 }
 
 .menu {
@@ -162,9 +164,11 @@ body {
     font-size: 2.5vmin;
     text-align: right;
     align-items: center;
+    justify-content: space-between;
     white-space: nowrap;
     color: #E6E9F8;
     z-index: 100 !important;
+    margin: 0;
 }
 
 
@@ -217,7 +221,14 @@ input[type=checkbox] {
     display: block;
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 600px){
+    .navbar img {
+        /* float: left; */
+        margin: 2%;
+        width: 5vmax;
+        padding-top: 20px;
+    }
+
     .menu {
         display: none;
         position: absolute;
@@ -227,7 +238,7 @@ input[type=checkbox] {
         text-align: center;
         padding: 16px 0;
         top: 12vmin;
-        font-size: 1rem;
+        font-size: 4vw;
     }
 
     .menu li:hover {
@@ -238,7 +249,7 @@ input[type=checkbox] {
     }
 
     .menu li + li {
-        margin-top: 12vmin;
+        margin-top: 1vmin;
     }
 
     .nav-links a {
@@ -264,8 +275,18 @@ input[type=checkbox] {
 
     .dropdown {
         left: 20%;
+        right: 20%;
         top: 15vmin;
         z-index: 100;
+        position: absolute; /*WITH RESPECT TO PARENT*/
+        display: none;
+    }
+
+    .dropdown li{
+        padding: 1em;
+        margin: 0;
+        width: 100%;
+        text-align: center;
     }
 
     .dropdown li:hover {
@@ -318,15 +339,6 @@ input[type=checkbox] {
     color: white;
     border: none;
     font-family: 'Outfit', sans-serif;
-    /* display: inline-block;
-    font-size: 1.5rem;
-    padding: .5vmax;
-    border-radius: 30px;
-    font-weight: 500;
-    width: 100%;
-    color: white;
-    border: none;
-    font-family: 'Outfit', sans-serif; */
 }
 
 .intro-body-container{
@@ -367,7 +379,7 @@ input[type=checkbox] {
 
 /*intro end*/
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1000px) {
     .intro2{
         font-size: 10vmin;
     }
@@ -405,7 +417,8 @@ input[type=checkbox] {
     }
 
     .get-involved{
-        font-size: 1rem;
+        font-size: 2.5vmax;
+        padding: 1rem;
     }
 
 }
@@ -466,7 +479,7 @@ input[type=checkbox] {
     color: #B0579C;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 600px) {
     .about-us{
         margin-top: 100%;
         margin-bottom: 10%;
@@ -493,7 +506,7 @@ input[type=checkbox] {
     .about-us-right{
         margin-left: 0;
         padding-top: 5%;
-        font-size: 4vmin;
+        font-size: 2.5vmax;
     }
 }
 
@@ -542,7 +555,7 @@ input[type=checkbox] {
     box-shadow: 0 10px 10px rgba(0, 0, 0, .25);
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 600px) {
     .our-teams-container{
         padding-top: 3%;
     }
@@ -628,7 +641,7 @@ input[type=checkbox] {
 
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 600px) {
 
     .event-image{
         padding-top: 1%;
@@ -640,7 +653,7 @@ input[type=checkbox] {
     }
 
     .events-description{
-        font-size: 1rem;
+        font-size: 2.5vmax;
         margin: auto;
         padding-top: 5%;
     }
@@ -648,8 +661,8 @@ input[type=checkbox] {
     .event-link button{
         width: 100%;
         display: inline-block;
-        font-size: 1rem;
-        padding: 1vmax;
+        font-size: 2.5vmax;
+        padding: 1rem;
         border-radius: 30px;
         font-weight: 500;
         width: 100%;
@@ -782,7 +795,7 @@ input[type=checkbox] {
     padding-bottom: .8rem;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 600px) {
     .join-us-button-title{
         font-weight: 600;
         font-size: 2.5vmax;
@@ -822,20 +835,20 @@ input[type=checkbox] {
         text-align: left;
         padding-left: 3vmax;
         padding-top: 1vmax;
-        font-size: 3.2vw;
+        font-size: 3vw;
         line-height: 120%;
         padding-right: 3vmax;
     }
 
     .join-us-button-link button{
+        font-family: 'Outfit', sans-serif;
         display: inline-block;
-        font-size: 2vmax;
-        padding: 1vmax;
         border-radius: 30px;
         font-weight: 500;
-        width: 100%;
         color: white;
         border: none;
+        font-size: 2.5vmax;
+        padding: 1rem;
         font-family: 'Outfit', sans-serif;
     
     }
@@ -957,17 +970,15 @@ input[type=submit] {
     display: inline-block;
     font-size: 1.2vmax;
     border-radius: 30px;
-    font-weight: 500;
-    color: white;
-    border: none;
-    font-family: 'Outfit', sans-serif;
 }
 
 .send-confirm {
     padding: 3rem 5rem;
     background-color: white;
-    border-radius: 15px;
-    border: solid 2px #856E9F;
+    padding: 0.5rem 1.5rem;
+    border-radius: 30px;
+    border: none;
+    font-family: 'Outfit', sans-serif;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -999,7 +1010,7 @@ input[type=submit] {
     font-style: italic;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
     .sender-form{
         display: block;
         margin-top: 1rem;
@@ -1035,9 +1046,15 @@ input[type=submit] {
     }
 
     .contact-button button{
-        font-size: 1rem;
+        font-size: 2.5vmax;
+        padding: 1rem;
         width: 50%;
         font-family: 'Outfit', sans-serif;
+        display: inline-block;
+        border-radius: 30px;
+        font-weight: 500;
+        color: white;
+        border: none;
     }
     
     
@@ -1130,6 +1147,7 @@ input[type=submit] {
     
     .email{
         display: block;
+        font-family: 'Outfit',serif;
         text-align: center;
         text-decoration: none;
         color: white;
