--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,10 @@ input[type=checkbox] {
         padding-top: 20px;
     }
 
+    .navbar{
+        height: 15vmin;
+    }
+
     .menu {
         display: none;
         position: absolute;
@@ -237,7 +241,7 @@ input[type=checkbox] {
         left: 0;
         text-align: center;
         padding: 16px 0;
-        top: 12vmin;
+        top: 15vmin;
         font-size: 4vw;
     }
 
@@ -481,7 +485,7 @@ input[type=checkbox] {
 
 @media screen and (max-width: 600px) {
     .about-us{
-        margin-top: 100%;
+        margin-top: 50%;
         margin-bottom: 10%;
     }
 
