trying to fix safari mobile issue

--- a/css/style.css
+++ b/css/style.css
@@ -217,10 +217,6 @@ input[type=checkbox] {
     display: block;
 }
 
-.our-team-navbar:click .dropdown {
-    display: block;
-}
-
 @media screen and (max-width: 600px){
     .navbar img {
         /* float: left; */
@@ -250,6 +246,7 @@ input[type=checkbox] {
         background-color: #856E9F;
         width: 100%;
         transition: 0.3s ease;
+        cursor: pointer;
     }
 
     .menu li + li {
@@ -265,6 +262,7 @@ input[type=checkbox] {
         color: white;
         text-decoration: none;
         display: inline-block;
+        cursor: pointer;
     }
 
     input[type=checkbox]:checked ~ .menu {
